--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,61 +6,63 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>850</width>
-    <height>446</height>
+    <width>634</width>
+    <height>315</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="widgetInOut" native="true">
+   <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>821</width>
-      <height>321</height>
+      <x>250</x>
+      <y>70</y>
+      <width>102</width>
+      <height>27</height>
      </rect>
     </property>
-    <widget class="QTableView" name="table_inout">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>50</y>
-       <width>791</width>
-       <height>261</height>
-      </rect>
-     </property>
-    </widget>
+    <property name="text">
+     <string>出入库管理</string>
+    </property>
    </widget>
-   <widget class="QWidget" name="widgetQuery" native="true">
+   <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>10</y>
-      <width>121</width>
-      <height>51</height>
+      <x>260</x>
+      <y>120</y>
+      <width>87</width>
+      <height>27</height>
      </rect>
     </property>
-    <widget class="QPushButton" name="pushButton">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>10</y>
-       <width>81</width>
-       <height>27</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>PushButton</string>
-     </property>
-    </widget>
+    <property name="text">
+     <string>库存查询</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>30</y>
+      <width>87</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>产品管理</string>
+    </property>
    </widget>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
-    <enum>LeftToolBarArea</enum>
+    <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
     <bool>false</bool>
@@ -72,7 +74,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>850</width>
+     <width>634</width>
      <height>25</height>
     </rect>
    </property>
@@ -80,27 +82,9 @@
     <property name="title">
      <string>操作</string>
     </property>
-    <addaction name="actionIn_out"/>
-    <addaction name="actionQuery"/>
-    <addaction name="actionExport"/>
    </widget>
    <addaction name="menuAction"/>
   </widget>
-  <action name="actionExport">
-   <property name="text">
-    <string>导出Excel </string>
-   </property>
-  </action>
-  <action name="actionIn_out">
-   <property name="text">
-    <string>出入库管理</string>
-   </property>
-  </action>
-  <action name="actionQuery">
-   <property name="text">
-    <string>库存查询</string>
-   </property>
-  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
