--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -23,8 +23,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>70</y>
+      <x>360</x>
+      <y>100</y>
       <width>102</width>
       <height>27</height>
      </rect>
@@ -36,8 +36,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>120</y>
+      <x>240</x>
+      <y>100</y>
       <width>87</width>
       <height>27</height>
      </rect>
@@ -49,14 +49,27 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>30</y>
+      <x>240</x>
+      <y>50</y>
       <width>87</width>
       <height>27</height>
      </rect>
     </property>
     <property name="text">
      <string>产品管理</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_4">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>100</y>
+      <width>87</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>订单管理</string>
     </property>
    </widget>
   </widget>
