--- a/src/product_manage.ui
+++ b/src/product_manage.ui
@@ -15,27 +15,61 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" colspan="3">
-     <widget class="QTableView" name="tableView"/>
-    </item>
-    <item row="1" column="0">
-     <widget class="QPushButton" name="add">
+    <item row="3" column="2">
+     <widget class="QPushButton" name="delete_2">
       <property name="text">
-       <string>添加</string>
+       <string>删除</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
+    <item row="3" column="1">
      <widget class="QPushButton" name="modify">
       <property name="text">
        <string>修改</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
-     <widget class="QPushButton" name="delete_2">
+    <item row="0" column="0" colspan="3">
+     <widget class="QTableView" name="table_product"/>
+    </item>
+    <item row="3" column="0">
+     <widget class="QPushButton" name="add">
       <property name="text">
-       <string>删除</string>
+       <string>添加</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLineEdit" name="lineEdit"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QComboBox" name="comboBox">
+      <item>
+       <property name="text">
+        <string>产品编号</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>产品名称</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>产品名称或编号</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>所有产品</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="2" column="2">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>查询</string>
       </property>
      </widget>
     </item>
