--- a/src/querymainwindow.ui
+++ b/src/querymainwindow.ui
@@ -141,30 +141,6 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="4">
-        <widget class="QComboBox" name="comboBox">
-         <item>
-          <property name="text">
-           <string>产品名称</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>产品代号</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>单号</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string/>
-          </property>
-         </item>
-        </widget>
-       </item>
        <item row="2" column="3">
         <widget class="QPushButton" name="pushButton_3">
          <property name="text">
@@ -184,6 +160,30 @@
          <property name="text">
           <string>*表示全部</string>
          </property>
+        </widget>
+       </item>
+       <item row="1" column="4">
+        <widget class="QComboBox" name="comboBox">
+         <item>
+          <property name="text">
+           <string>产品名称</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>产品编号</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>单号</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string/>
+          </property>
+         </item>
         </widget>
        </item>
       </layout>
