--- a/src/addproduct.ui
+++ b/src/addproduct.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>296</width>F
+    <width>296</width>
     <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>添加产品</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="8" column="0">
@@ -101,37 +101,37 @@
  </widget>
  <resources/>
  <connections>
- <connection>
-  <sender>buttonBox</sender>
-  <signal>rejected()</signal>
-  <receiver>AddProductDialog</receiver>
-  <slot>reject()</slot>
-  <hints>
-   <hint type="sourcelabel">
-    <x>316</x>
-    <y>260</y>
-   </hint>
-   <hint type="destinationlabel">
-    <x>286</x>
-    <y>274</y>
-   </hint>
-  </hints>
- </connection>
- <connection>
-  <sender>buttonBox</sender>
-  <signal>accepted()</signal>
-  <receiver>AddProductDialog</receiver>
-  <slot>accept()</slot>
-  <hints>
-   <hint type="sourcelabel">
-    <x>316</x>
-    <y>260</y>
-   </hint>
-   <hint type="destinationlabel">
-    <x>286</x>
-    <y>274</y>
-   </hint>
-  </hints>
- </connection>
-  </connections>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>AddProductDialog</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>316</x>
+     <y>260</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>286</x>
+     <y>274</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
+   <receiver>AddProductDialog</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>316</x>
+     <y>260</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>286</x>
+     <y>274</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
