--- a/src/modifyorderdialog.ui
+++ b/src/modifyorderdialog.ui
@@ -1,90 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ModifyProductDialog</class>
- <widget class="QDialog" name="ModifyProductDialog">
+ <class>ModifyOrderDialog</class>
+ <widget class="QDialog" name="ModifyOrderDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>276</width>
+    <width>251</width>
     <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>产品修改</string>
+   <string>订单修改</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>产品编号*:</string>
+      <string>订单号*</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLineEdit" name="p_id"/>
+    <widget class="QLineEdit" name="id"/>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>产品名称*:</string>
+      <string>日期*</string>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QLineEdit" name="p_name"/>
+    <widget class="QDateEdit" name="date">
+     <property name="displayFormat">
+      <string>yyyy-MM-dd</string>
+     </property>
+    </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>单位*：</string>
+      <string>签收人*</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QLineEdit" name="p_unit"/>
+    <widget class="QLineEdit" name="sign_people"/>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>单价*:</string>
+      <string>经办人*</string>
      </property>
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QLineEdit" name="p_price"/>
+    <widget class="QLineEdit" name="operator_2"/>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="label_5">
      <property name="text">
-      <string>规格*:</string>
+      <string>备注</string>
      </property>
     </widget>
    </item>
    <item row="4" column="1">
-    <widget class="QLineEdit" name="p_specification"/>
+    <widget class="QLineEdit" name="remark"/>
    </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="label_6">
-     <property name="text">
-      <string>现库存*:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="1">
-    <widget class="QLineEdit" name="p_remain"/>
-   </item>
-   <item row="6" column="0">
-    <widget class="QLabel" name="label_7">
-     <property name="text">
-      <string>备注:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="1">
-    <widget class="QLineEdit" name="p_remarks"/>
-   </item>
-   <item row="7" column="0" colspan="2">
+   <item row="5" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -101,7 +85,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>ModifyProductDialog</receiver>
+   <receiver>ModifyOrderDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -117,7 +101,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>ModifyProductDialog</receiver>
+   <receiver>ModifyOrderDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
