--- a/src/stockmainwindow.ui
+++ b/src/stockmainwindow.ui
@@ -30,19 +30,12 @@
          <property name="date">
           <date>
            <year>2014</year>
-           <month>2</month>
+           <month>12</month>
            <day>1</day>
           </date>
          </property>
          <property name="displayFormat">
           <string>yyyy-MM-dd</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>产品名称/代号(*全部)</string>
          </property>
         </widget>
        </item>
@@ -99,6 +92,25 @@
        </item>
        <item row="2" column="3" colspan="2">
         <widget class="QLineEdit" name="sq_connent"/>
+       </item>
+       <item row="2" column="1">
+        <widget class="QComboBox" name="comboBox">
+         <item>
+          <property name="text">
+           <string>产品编号</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>产品名称</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>全部</string>
+          </property>
+         </item>
+        </widget>
        </item>
       </layout>
      </widget>
